Rename head in library to libraryHead.html and update footer and toolbar
Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/lib/src/main/resources/templates/fragments/toolbar.html
+++ b/lib/src/main/resources/templates/fragments/toolbar.html
@@ -7,7 +7,7 @@
       <div class="toolbar__left spacing-above-0">
         <a href="#content" id="skip-to-content" class="button button--small">Skip to content</a>
         <a class="logo" href="/">
-          <img src="/assets/images/code-for-america-logo_white.svg"
+          <img src="/webjars/form-flow/0.0.1/images/code-for-america-logo_white.svg"
                alt="Code for America logo"
                style="width: 96px;"
                class="vertical-align-middle" />
@@ -16,28 +16,6 @@
       <div class="toolbar__right">
         <!--        <select th:replace="fragments/localeSelect :: localeSelect"></select>-->
       </div>
-      <!--      <div>-->
-      <!--                <a href="#" id="intercom_custom_launcher"-->
-      <!--                   class="button button&#45;&#45;small button&#45;&#45;intercom"><i-->
-      <!--                    class="button__icon&#45;&#45;left icon-insert_comment"></i>Chat-->
-      <!--                </a>-->
-      <!--      </div>-->
-      <!--      <script>-->
-      <!--        window.intercomSettings = {-->
-      <!--          app_id: "dje5ebi4",-->
-      <!--          confirmation_id: "[[${applicationId}]]",-->
-      <!--          county: "[[${county}]]",-->
-      <!--          zip_code: "[[${zipCode}]]",-->
-      <!--          programs: "[[${programs}]]",-->
-      <!--          expedited_snap: "[[${expeditedSnap}]]",-->
-      <!--          expedited_ccap: "[[${expeditedCcap}]]",-->
-      <!--          custom_launcher_selector: '#intercom_custom_launcher',-->
-      <!--          hide_default_launcher: true-->
-      <!--        };-->
-      <!--      </script>-->
-      <!--      <script>-->
-      <!--        (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/dje5ebi4';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();-->
-      <!--      </script>-->
     </div>
   </header>
 </th:block>
