Add fragment to full icons list

--- a/lib/src/main/resources/templates/fragments/icons.html
+++ b/lib/src/main/resources/templates/fragments/icons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
-<main>
+<article th:fragment="icons-list">
   <h1>Icons</h1>
   <table>
     <thead>
@@ -1501,6 +1501,6 @@
     </tr>
     </tbody>
   </table>
-</main>
+</article>
 </body>
 </html>
