Reformats the code based on the google stylesheet with extended hard wrap at 130

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footer" class="main-footer footer-minnesota-blue">
-  <div class="grid">
-    <div class="grid__item">
-      <div class="grid__item width-one-half">
-        <p th:text="#{footer.this-benefits-application-is}"></p>
-        <a class="text--small font-white" target="_blank" rel="noopener noreferrer" href="/faq"
-           th:text="#{footer.faq}"></a><br/>
-        <a class="text--small font-white" target="_blank" rel="noopener noreferrer" href="/privacy"
-           th:text="#{footer.privacy}"></a>
-      </div>
-      <div class="main-footer__cfa-logo grid__item">
-        <a href="https://www.codeforamerica.org" class="spacing-below-0">
-          <img src="/webjars/form-flow/0.0.1/images/code-for-america-logo_white.svg" alt="Code for America logo"
-               style="width: 100px;">
-        </a>
-      </div>
+    <div class="grid">
+        <div class="grid__item">
+            <div class="grid__item width-one-half">
+                <p th:text="#{footer.this-benefits-application-is}"></p>
+                <a class="text--small font-white" target="_blank" rel="noopener noreferrer" href="/faq"
+                   th:text="#{footer.faq}"></a><br/>
+                <a class="text--small font-white" target="_blank" rel="noopener noreferrer" href="/privacy"
+                   th:text="#{footer.privacy}"></a>
+            </div>
+            <div class="main-footer__cfa-logo grid__item">
+                <a href="https://www.codeforamerica.org" class="spacing-below-0">
+                    <img src="/webjars/form-flow/0.0.1/images/code-for-america-logo_white.svg"
+                         alt="Code for America logo"
+                         style="width: 100px;">
+                </a>
+            </div>
+        </div>
     </div>
-  </div>
 </footer>
 </html>
