--- a/src/main/resources/templates/fragments/screens/screenWithOneInput.html
+++ b/src/main/resources/templates/fragments/screens/screenWithOneInput.html
@@ -1,38 +1,39 @@
 <th:block
-    th:fragment="screenWithOneInput"
-    th:assert="
+        th:fragment="screenWithOneInput"
+        th:assert="
       ${!#strings.isEmpty(title)},
       ${!#strings.isEmpty(header)},
       ${!#strings.isEmpty(formAction)},
       ${inputContent != null}">
-  <!DOCTYPE html>
-  <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
-  <head th:replace="fragments/head :: head(title=${title})"></head>
-  <body >
-  <div class="page-wrapper">
-    <div th:replace="fragments/toolbar :: toolbar"></div>
-    <section class="slab">
-      <div class="grid">
-        <div th:replace="fragments/goBack :: goBackLink"></div>
-        <main id="content" role="main" class="form-card spacing-above-35">
-          <th:block
-              th:replace="'fragments/cardHeader' :: cardHeader(header=${header}, subtext=${subtext})"/>
-          <th:block
-              th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
-            <th:block th:ref="formContent">
-              <div class="form-card__content">
-                <th:block th:replace="${inputContent}"/>
-              </div>
-              <div class="form-card__footer">
-                <th:block th:replace="fragments/inputs/submitButton :: submitButton(text=${buttonLabel != null ? buttonLabel : 'Submit'})" />
-              </div>
-            </th:block>
-          </th:block>
-        </main>
-      </div>
-    </section>
-  </div>
-  <th:block th:replace="fragments/footer :: footer"/>
-  </body>
-  </html>
+    <!DOCTYPE html>
+    <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
+    <head th:replace="fragments/head :: head(title=${title})"></head>
+    <body>
+    <div class="page-wrapper">
+        <div th:replace="fragments/toolbar :: toolbar"></div>
+        <section class="slab">
+            <div class="grid">
+                <div th:replace="fragments/goBack :: goBackLink"></div>
+                <main id="content" role="main" class="form-card spacing-above-35">
+                    <th:block
+                            th:replace="'fragments/cardHeader' :: cardHeader(header=${header}, subtext=${subtext})"/>
+                    <th:block
+                            th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
+                        <th:block th:ref="formContent">
+                            <div class="form-card__content">
+                                <th:block th:replace="${inputContent}"/>
+                            </div>
+                            <div class="form-card__footer">
+                                <th:block
+                                        th:replace="fragments/inputs/submitButton :: submitButton(text=${buttonLabel != null ? buttonLabel : 'Submit'})"/>
+                            </div>
+                        </th:block>
+                    </th:block>
+                </main>
+            </div>
+        </section>
+    </div>
+    <th:block th:replace="fragments/footer :: footer"/>
+    </body>
+    </html>
 </th:block>
