--- a/src/main/resources/templates/fragments/demoBanner.html
+++ b/src/main/resources/templates/fragments/demoBanner.html
@@ -2,8 +2,9 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="demoBanner" th:if="${@environment.getProperty('demo')}" class="demo-banner">
-    This site is for example purposes only. If you need to submit an application, apply on <a class="link--subtle"
-                                                                                              href="https://mnbenefits.mn.gov/">MNbenefits</a>.
+  This site is for example purposes only. If you need to submit an application, apply on <a
+    class="link--subtle"
+    href="https://mnbenefits.mn.gov/">MNbenefits</a>.
 </div>
 </body>
 </html>
