--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,7 +12,8 @@
       </div>
       <div class="main-footer__cfa-logo grid__item">
         <a href="https://www.codeforamerica.org" class="spacing-below-0">
-          <img src="/webjars/form-flow/0.0.1/images/code-for-america-logo_white.svg" alt="Code for America logo"
+          <img src="/webjars/form-flow/0.0.1/images/code-for-america-logo_white.svg"
+               alt="Code for America logo"
                style="width: 100px;">
         </a>
       </div>
