--- a/src/main/resources/templates/fragments/inputs/text.html
+++ b/src/main/resources/templates/fragments/inputs/text.html
@@ -27,7 +27,8 @@
             aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
             aria-invalid=${hasError}"
            th:value="${inputData.getOrDefault(inputName, '')}">
-    <th:block th:replace="fragments/inputError :: validationError(inputName=${inputName})"></th:block>
+    <th:block
+        th:replace="fragments/inputError :: validationError(inputName=${inputName})"></th:block>
   </div>
 </th:block>
 </body>
