Add enctype attribute to form fragment

--- a/src/main/resources/templates/fragments/form.html
+++ b/src/main/resources/templates/fragments/form.html
@@ -4,6 +4,7 @@
 <form th:fragment="form"
       th:assert="${!#strings.isEmpty(action)}, ${!#strings.isEmpty(content)}"
       th:action="@{${action}}"
+      th:enctype="${enctype}"
       autocomplete="off"
       method="post">
   <th:block th:replace="${content}"/>
