--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1504,8 +1504,7 @@
       <td>documentAndEnvelope</td>
       <td>
         <svg th:fragment="documentAndEnvelope" width="100" height="75" viewBox="0 0 100 75"
-             fill="none"
-             xmlns="http://www.w3.org/2000/svg">
+             fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <g clip-path="url(#clip0_67_638)">
             <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M28.9188 69.2452C22.4102 66.0322 15.1926 63.244 11.4206 57.0399C7.55331 50.6792 7.73198 42.7951 8.32184 35.3682C8.91953 27.8428 10.0387 19.9886 14.827 14.1501C19.5764 8.35899 27.0699 5.94509 34.233 3.77398C41.1602 1.67438 48.4537 -0.11821 55.4148 1.84812C62.2601 3.78172 67.5159 9.01225 72.0836 14.4658C76.431 19.6563 79.154 25.7624 80.9219 32.302C82.8083 39.2793 84.9367 46.6273 82.6319 53.4828C80.278 60.4846 74.5707 65.8813 68.314 69.8045C62.2824 73.5865 55.2028 75.2429 48.0898 75.1419C41.2647 75.045 35.0374 72.2657 28.9188 69.2452Z"
