adds missing <td> to the `takingPicWithPhone` icon

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1569,6 +1569,7 @@
       </td>
     </tr>
     <tr>
+      <td>takingPicWithPhone</td>
       <td>
         <svg th:fragment="takingPicWithPhone" width="180" height="155" viewBox="0 0 180 155"
              fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
