--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="headLinks">
   <link href="/webjars/form-flow/0.0.1/css/honeycrisp.min.css" rel="preload" as="style"/>
+  <link href="/webjars/form-flow/0.0.1/css/honeycrisp.min.css" rel="stylesheet"/>
+  <link href="/webjars/form-flow/0.0.1/css/libraryStyles.css" rel="preload" as="style"/>
+  <link href="/webjars/form-flow/0.0.1/css/libraryStyles.css" rel="stylesheet"/>
   <link href="/webjars/form-flow/0.0.1/css/customDropzone.css" rel="preload" as="style"/>
   <link href="/webjars/form-flow/0.0.1/css/customDropzone.css" rel="stylesheet"/>
-  <link href="/webjars/form-flow/0.0.1/css/honeycrisp.min.css" rel="stylesheet"/>
   <link rel="preload" href="/webjars/form-flow/0.0.1/fonts/MaterialIcons-Regular.eot?ia7soh"
         as="font"
         crossorigin="anonymous"/>
