--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -284,7 +284,7 @@
           if (!file.type.includes("image")) {
             setDefaultThumbnail(file);
           }
-          if (file.type.includes("image/heic")) {
+          if (file.type.includes("image/heic") || file.type.includes("image/tif")) {
             setDefaultThumbnail(file);
           }
           $('#submit-my-documents-' + [[${inputName}]]).removeClass('hidden');
