Created a reveal fragment
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1647,6 +1647,48 @@
         </svg>
       </td>
     </tr>
+    <tr>
+      <td>smallMoneyIcon</td>
+      <td>
+        <svg th:fragment="smallMoneyIcon" width="32" height="33" viewBox="0 0 32 33" fill="none"
+             xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_67_872)">
+            <path
+                d="M25.3333 19.0554V8.16656C25.3333 6.66934 24.1333 5.44434 22.6666 5.44434H3.99992C2.53325 5.44434 1.33325 6.66934 1.33325 8.16656V19.0554C1.33325 20.5527 2.53325 21.7777 3.99992 21.7777H22.6666C24.1333 21.7777 25.3333 20.5527 25.3333 19.0554ZM13.3333 17.6943C11.1199 17.6943 9.33325 15.8704 9.33325 13.611C9.33325 11.3516 11.1199 9.52767 13.3333 9.52767C15.5466 9.52767 17.3333 11.3516 17.3333 13.611C17.3333 15.8704 15.5466 17.6943 13.3333 17.6943ZM30.6666 9.52767V24.4999C30.6666 25.9971 29.4666 27.2221 27.9999 27.2221H5.33325V24.4999H27.9999V9.52767H30.6666Z"
+                fill="black"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_67_872">
+              <rect width="32" height="32.6667" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>smallHouseIcon</td>
+      <td>
+        <svg th:fragment="smallHouseIcon" width="30" height="26" viewBox="0 0 30 26" fill="none"
+             xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 25.2273V16.3235H18V25.2273H25.5V13.3556H30L15 0L0 13.3556H4.5V25.2273H12Z"
+                fill="black"/>
+        </svg>
+      </td>
+    </tr>
+
+    <tr>
+      <td>smallPersonIcon</td>
+      <td>
+        <svg th:fragment="smallPersonIcon" width="25" height="26" viewBox="0 0 25 26" fill="none"
+             xmlns="http://www.w3.org/2000/svg">
+          <path
+              d="M12.5 13.0002C15.7229 13.0002 18.3333 10.1581 18.3333 6.66683C18.3333 3.16766 15.7229 0.333496 12.5 0.333496C9.27706 0.333496 6.66665 3.16766 6.66665 6.66683C6.66665 10.1581 9.27706 13.0002 12.5 13.0002ZM12.5 16.1668C8.61352 16.1668 0.833313 18.2806 0.833313 22.5002V25.6668H24.1666V22.5002C24.1666 18.2806 16.3864 16.1668 12.5 16.1668Z"
+              fill="black"/>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+    </tr>
     </tbody>
   </table>
 </article>
