Fix an issue where file_ids were not removed from submissions if you went back and deleted uploaded files
[#184048535]

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Rapi Castillo <rcastillo@codeforamerica.org.

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -184,6 +184,7 @@
       if (toDeleteIdx !== -1) {
         window['userFileIds' + [[${inputName}]]].splice(toDeleteIdx, 1)
       }
+      updateFileInputValue();
       showNumberOfAddedFiles();
     }
 
